<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<ImageView
    android:id="@+id/imageView_main_image"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/nutella_pie" />

<TextView
    android:id="@+id/textView_main_name"
    android:layout_width="285dp"
    android:layout_height="32dp"
    android:layout_marginTop="132dp"
    android:gravity="left"
    android:text="Nutella Pie"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"></TextView>
</LinearLayout>